--- a/index.html
+++ b/index.html
@@ -1,17 +1,54 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
-</head>
-<style>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>repl.it</title>
 
-</style>
-<body>
+	<style>
+		section {
+            height: 80vh;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            padding: 20px;
+        }
 
+		h2 {
+			
+			text-align: center;
+			text-decoration-line: underline overline;
+	;
+		}
 
+		p{
+			margin-left: auto;
+			margin-right: auto;
+			width: 50vw;
+			text-align: justify;
+		}
 
-	
-</body>
+		span{
+			font-weight: bold;
+		}
+	</style>
+    <body>
+
+		<section>
+			
+			<h1> Sample Poem </h1>
+			<h2> No Class, More Stress  </h2>
+
+			<p><span class="bold">Why</span> won't students come to labs? This is something I always ponder. After unprepared students write exams, They watch their marks in wonder. </p>
+
+			<p><span class="bold">Why</span> won't students come to labs? What is more important than class? How can you be a student if you don't even try to pass?</p>	
+				
+			<p><span class="bold">Why</span> won't students come to labs? It happens all the time. If you came to labs, you'd know what to do. But you would rather duck and go lime.</p>	
+				
+			<p><span class="bold">Why</span> won't students come to labs? I see them all now stressing. If you only learned this basic programming, You would surely now be zessing.</p>	
+			
+		</section>
+	</body>
+  
 </html>
